--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,15 @@
-
 *
 !/**/
 !*.*
-
 *.o
 *.exe
 *.cfg
-
 .vs
 .vscode
-.idea
 build
-
+*.idea
 cpplint.py
 execute.sh
 filter_options
-
 !convenciones.txt
 !CMakeLists.txt
