refactor in accepter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,10 +45,10 @@ FILE(GLOB_RECURSE server_src "Server/*.cpp")
 # TARGETS
 
 # Common
-add_library(dune-common SHARED ${common_src} Common/src/Exceptions/LibError.cpp)
+add_library(dune-common SHARED ${common_src} Common/includes/NonBlockingQueue.h)
 
 # Client
-add_executable(dune ${client_src} Client/src/Thread/RecvThread.cpp Client/src/Thread/RecvThread.h)
+add_executable(dune ${client_src})
 target_link_libraries(dune dune-common SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 target_link_libraries(dune ${SDL2PP_LIBRARIES})
 
