--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,8 @@
 port: "8082"
+ticks_per_sec: 60
 map_path: "../Dune/mapa.yaml"
+rows: 100
+cols: 100
 speed_factor: 1
 inital_gold: 50
 inital_energy: 150
