--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.16)
+
 project(prueba_9)
 
 
@@ -21,7 +23,7 @@ set(CMAKE_AUTORCC ON)
 add_executable(editor dialog_forma_tablero.cpp dialog_forma_tablero.h dialog_forma_tablero.ui  estado_last_clicked.cpp estado_last_clicked.h celda.cpp celda.h escenario.h escenario.cpp mainwindow.h mainwindow.cpp main.cpp mainwindow.ui resources/my_resources.qrc)
 
 # el ${UIS_HEADERS} son los paths autogenerados a los .ui compilados
-target_include_directories(nombre PRIVATE ${UIS_HEADERS})
+target_include_directories(editor PRIVATE ${UIS_HEADERS})
 
 # Use the Widgets module from Qt 5.
-target_link_libraries(nombre PRIVATE Qt5::Widgets Qt5::Multimedia yaml-cpp)
+target_link_libraries(editor PRIVATE Qt5::Widgets Qt5::Multimedia yaml-cpp)
