Se agrega el hilo recibidor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ add_library(dune-common SHARED ${common_src} Common/includes/BlockingQueue.h)
 target_link_libraries(dune-common)
 
 # Client
-add_executable(dune ${client_src} Client/src/Thread/Unidad.cpp Client/src/Thread/Unidad.h)
+add_executable(dune ${client_src} Client/src/Thread/Unidad.cpp Client/src/Thread/Unidad.h Client/src/Thread/SendThread.cpp Client/src/Thread/SendThread.h Client/src/Thread/Action.cpp Client/src/Thread/Action.h)
 target_link_libraries(dune dune-common SDL2 SDL2_image SDL2_ttf SDL2_mixer ${SDL2PP_LIBRARIES})
 
 # Server
