--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,11 @@
 port: "8082"
 ticks_per_sec: 60
-map_path: "/home/dypa/dune/Dune/mapa_default_1.yaml"
-speed_factor: 1
-inital_gold: 50
-inital_energy: 150
+map_path: "/home/dypa/Dune/mapa_default_1.yaml"
+
+speedFactor: 1
+initialGold: 50
+initialEnergy: 150
+
 buildings:
   construction_center:
     energy: 0
