refactor units/terrains/map

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ FILE(GLOB_RECURSE server_src "Server/*.cpp")
 # TARGETS
 
 # Common
-add_library(dune-common SHARED ${common_src})
+add_library(dune-common SHARED ${common_src} )
 target_link_libraries(dune-common)
 
 # Client
@@ -68,12 +68,12 @@ target_link_libraries(dune-common)
 # add_executable(dune ${client_src} Client/src/Core/UnitType.cpp Client/src/Characters/UnitType.h)
 # target_link_libraries(dune dune-common SDL2 SDL2_image SDL2_ttf SDL2_mixer ${SDL2PP_LIBRARIES})
 #=======
-add_executable(dune ${client_src} Client/src/ButtonWidtrap.cpp Client/src/ButtonWidtrap.h Client/src/Button.cpp Client/src/Button.h Client/src/ButtonRefinery.cpp Client/src/ButtonRefinery.h)
+add_executable(dune ${client_src} )
 target_link_libraries(dune dune-common SDL2 SDL2_image SDL2_ttf SDL2_mixer ${SDL2PP_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Multimedia)
 # >>>>>>> b38a09028bed847a2579ec53ab1d5ecbbd2b6dfb
 
 # Server
-add_executable(dune-server ${server_src} Server/includes/Control/ClientConnection.h Server/src/Control/ClientConnection.cpp Server/includes/Control/Commands/Command.h Server/src/Control/Command/Command.cpp Server/includes/Control/Commands/SelectUnitCommand.h Server/includes/Control/Commands/MoveUnitCommand.h Server/includes/Control/Commands/BuildBuildingCommand.h Server/includes/Control/Commands/CreateUnitCommand.h Server/src/Control/Command/SelectUnitCommand.cpp Server/src/Control/Command/BuildBuildingCommand.cpp Server/src/Control/Command/MoveUnitCommand.cpp Server/includes/Model/Player.h Server/src/Model/Player.cpp Server/includes/Model/Buildings/Barracks.h Server/src/Model/Buildings/Barracks.cpp Server/config/YAMLReader.cpp Server/config/YAMLReader.h Server/config/ConfigReader.cpp Server/config/ConfigReader.h Server/config/GameConfig.cpp Server/config/GameConfig.h Server/config/MapReader.cpp Server/config/MapReader.h Server/includes/Control/ClientsConnected.h Server/src/Control/ClientsConnected.cpp Server/src/Control/Command/CreateUnitCommand.cpp)
+add_executable(dune-server ${server_src} Server/includes/Model/Units/Harvester.h Server/src/Model/Units/Harvester.cpp)
 target_link_libraries(dune-server dune-common ${YAML_CPP_LIBRARIES})
 #------------------------------------------------------------------------------
 
