--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,12 +67,12 @@ target_link_libraries(dune-common)
 # add_executable(dune ${client_src} Client/src/Core/UnitType.cpp Client/src/GameObject/UnitType.h)
 # target_link_libraries(dune dune-common SDL2 SDL2_image SDL2_ttf SDL2_mixer ${SDL2PP_LIBRARIES})
 #=======
-add_executable(dune ${client_src} Client/src/Object/IObject.h Client/src/Object/GameObject.h Client/src/GameObject/Vehicle.h Client/src/GameObject/Vehicles/DeviatorCL.cpp Client/src/GameObject/Vehicles/DeviatorCL.h Client/src/GameObject/Vehicles/TrikeCL.cpp Client/src/GameObject/Vehicles/TrikeCL.h Client/src/GameObject/Vehicles/SonicTankCL.cpp Client/src/GameObject/Vehicles/SonicTankCL.h Client/src/GameObject/Vehicles/TankCL.cpp Client/src/GameObject/Vehicles/TankCL.h Client/src/GameObject/Vehicles/DevastatorCL.cpp Client/src/GameObject/Vehicles/DevastatorCL.h Client/src/GameObject/Vehicles/HarvesterCL.cpp Client/src/GameObject/Vehicles/HarvesterCL.h Client/src/GameObject/BuildCL.h Client/src/GameObject/Builds/ConstructionYardCL.cpp Client/src/GameObject/Builds/ConstructionYardCL.h Client/src/GameObject/Vehicle.cpp Client/src/GameObject/Button.cpp Client/src/GameObject/BuildCL.cpp)
+add_executable(dune ${client_src})
 target_link_libraries(dune dune-common SDL2 SDL2_image SDL2_ttf SDL2_mixer ${SDL2PP_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Multimedia)
 # >>>>>>> b38a09028bed847a2579ec53ab1d5ecbbd2b6dfb
 
 # Server
-add_executable(dune-server ${server_src} Server/includes/Model/Weapons/Cannon.h Server/src/Model/Weapons/Cannon.cpp Server/includes/Model/Weapons/Rocket.h Server/src/Model/Weapons/Rocket.cpp Server/includes/Model/Weapons/RocketLauncher.h Server/includes/Model/Weapons/SmallCannon.h Server/src/Model/Weapons/RocketLauncher.cpp Server/src/Model/Weapons/SmallCannon.cpp)
+add_executable(dune-server ${server_src} Server/src/Model/Units/Attackable.cpp Server/src/Model/Units/Attacker.cpp Server/src/Model/Units/Offensive.cpp)
 target_link_libraries(dune-server dune-common ${YAML_CPP_LIBRARIES})
 #------------------------------------------------------------------------------
 
