Se agregan mas botones y edificios

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ add_library(dune-common SHARED ${common_src})
 target_link_libraries(dune-common)
 
 # Client
-add_executable(dune ${client_src})
+add_executable(dune ${client_src} Client/src/GameObject/Builds/LightFactoryCL.cpp Client/src/GameObject/Builds/LightFactoryCL.h Client/src/GameObject/Builds/HeavyFactoryCL.cpp Client/src/GameObject/Builds/HeavyFactoryCL.h Client/src/GameObject/Builds/WindTrapCL.cpp Client/src/GameObject/Builds/WindTrapCL.h Client/src/GameObject/Builds/RefineryCL.cpp Client/src/GameObject/Builds/RefineryCL.h Client/src/GameObject/Builds/SiloCL.cpp Client/src/GameObject/Builds/SiloCL.h Client/src/GameObject/Builds/BarrackCL.cpp Client/src/GameObject/Builds/BarrackCL.h Client/src/GameObject/Builds/PalaceCL.cpp Client/src/GameObject/Builds/PalaceCL.h Client/src/GameObject/Button/ButtonLightFactoryCL.cpp Client/src/GameObject/Button/ButtonLightFactoryCL.h Client/src/GameObject/Button/ButtonHeavyFactoryCL.cpp Client/src/GameObject/Button/ButtonHeavyFactoryCL.h Client/src/GameObject/Button/ButtonSilo.cpp Client/src/GameObject/Button/ButtonSilo.h Client/src/GameObject/Button/ButtonBarrack.cpp Client/src/GameObject/Button/ButtonBarrack.h Client/src/GameObject/Button/ButtonPalaceCL.cpp Client/src/GameObject/Button/ButtonPalaceCL.h)
 target_link_libraries(dune dune-common SDL2 SDL2_image SDL2_ttf SDL2_mixer ${SDL2PP_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Multimedia)
 
 # Server
