--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,10 @@
 ticks_per_sec: 60
-total_maps: 3
+total_maps: 4
 maps:
   0: "/home/dypa/Dune/mapa1.yaml"
   1: "/home/dypa/Dune/mapa2.yaml"
   2: "/home/dypa/Dune/mapa3.yaml"
+  3: "/home/dypa/Dune/mapa4.yaml"
 speedFactor: 50
 blockMovement: 2
 rangeFactor: 2000
