--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,10 @@
 ticks_per_sec: 30
 total_maps: 4
 maps:
-  0: "/home/dypa/Dune/mapa1.yaml"
-  1: "/home/dypa/Dune/mapa2.yaml"
-  2: "/home/dypa/Dune/mapa3.yaml"
-  3: "/home/dypa/Dune/mapa4.yaml"
+  0: "../mapa1.yaml"
+  1: "../mapa2.yaml"
+  2: "../mapa3.yaml"
+  3: "../mapa4.yaml"
 speedFactor: 50
 blockMovement: 2
 rangeFactor: 2000
